# AuditCov

./: .gitignore  AGENTS.md  README.md  ai_audit_coverage_codex_v1_design.md  pyproject.toml
.agents/plugins/: marketplace.json
auditcov_mcp/: __init__.py  cli.py  client.py  server.py  store.py  web.py
auditcov_mcp/web_static/: app.css  app.js  index.html
docs/: mcp-parameter-probe.md  read-hook-probes.md
hooks/claude_code/: auditcov_hook.py
hooks/opencode/: auditcov_plugin.ts
hooks/read_probe/: claude_read_hook.py  opencode_read_hook.ts
plugins/auditcov/: .mcp.json
plugins/auditcov/.codex-plugin/: plugin.json
plugins/auditcov/auditcov_mcp/: __init__.py  bypass.py  client.py  paths.py  server.py  store.py  web.py
plugins/auditcov/auditcov_mcp/web_static/: app.css  app.js
plugins/auditcov/skills/auditcov/: SKILL.md  SKILL.zh-CN.md
plugins/auditcov/skills/auditcov/agents/: openai.yaml
scripts/: auditcov_install.py  install_mcp_parameter_probe_wsl.py  install_read_hook_probes_wsl.py  show_read_hook_probe_log.py
skills/auditcov/: SKILL.md  SKILL.zh-CN.md
tests/: test_agent_adapters.py  test_bypass.py  test_cli.py  test_mcp_parameter_probe.py  test_paths.py  test_read_hook_probes.py  test_server.py  test_store.py  test_web_api.py  test_web_static.py
tools/: mcp_parameter_probe.py
