[project]
name = "auditcov"
version = "0.2.0"
description = "Cross-agent objective source-read coverage tracker for code audits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
auditcov-mcp = "auditcov_mcp.server:main"
auditcov-server = "auditcov_mcp.web:main"
auditcov-web = "auditcov_mcp.web:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.package-data]
auditcov_mcp = ["web_static/*.html", "web_static/*.css", "web_static/*.js"]
